--- a/kachabazar-store/package.json
+++ b/kachabazar-store/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.5",
+    "@hookform/resolvers": "^2.9.10",
+    "@material-ui/core": "^4.12.4",
     "@next/eslint-plugin-next": "^12.0.0",
     "@react-oauth/google": "^0.2.6",
     "@react-pdf/renderer": "^2.1.1",
@@ -25,6 +27,7 @@
     "axios": "^0.24.0",
     "currency-symbol-map": "^5.0.1",
     "dayjs": "^1.10.7",
+    "formik": "^2.2.9",
     "html2canvas": "^1.3.3",
     "iconv-lite": "^0.6.3",
     "js-cookie": "^3.0.1",
@@ -52,7 +55,8 @@
     "socket.io-client": "^4.4.0",
     "swiper": "^8.0.3",
     "tailwind-scrollbar-hide": "^1.0.4",
-    "use-local-storage-state": "^13.0.0"
+    "use-local-storage-state": "^13.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
