--- a/kachabazar-backend/package.json
+++ b/kachabazar-backend/package.json
@@ -27,6 +27,8 @@
     "mongoose": "^5.13.8",
     "mongoose-sequence": "^5.3.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.7.2",
     "socket.io": "^4.4.0",
     "stripe": "^9.14.0",
